--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -8,6 +8,16 @@ Short-term stability is important for transactions and long-term stability is im
 
 currencies are judged by their ability to serve three functions???as a medium of exchange, a unit of account, and a store of value. To successfully serve these functions, a currency must be easily and broadly usable (necessary for being a medium of exchange) and demonstrate at least some level of value stability (necessary for acting as a unit of account and store of value).
 
+~\textit{Discussion on how a stablecoin can be adopted by the majority and the comparison between other cryptocurrencies:}
+Rightly or wrongly, volatile cryptocurrencies like bitcoin are not viewed by many central bankers as a serious
+competitive threat to their own national currencies. However, a stablecoin of sufficient size and use may
+be deemed to pose greater direct competition to fiat currencies than bitcoin and may therefore spark a
+competitive response or regulatory backlash from central banks, which in many jurisdictions have largely
+remained on the sidelines of cryptocurrency regulation to date. What is less clear here for cryptocurrencies
+is “how big is too big?” Central bankers have been reluctant to provide specific quantitative levels that would
+trigger concerns (e.g., what percentage of payments made with a cryptocurrency would be deemed to pose
+a threat to a central bank’s ability to conduct monetary policy?)~\cite{report}.
+
 %For the paper let's have a section under preliminaries and talk about what is money?where does it come from?
 %useful articles for this topic:
 %https://www.imf.org/external/pubs/ft/fandd/2012/09/basics.htm
@@ -54,18 +64,54 @@ https://www.euromoney.com/article/b1bbk5rb8gp227/forget-bitcoin-stablecoins-will
 As mentioned in the ..., currencies can serve as a store of value, a unit of account, and a medium of exchange~\cite{smithin2002money}. In order to serves as a unit of account and store of value, currencies have to denote a minimum level of value stability. In this regard, stable coins are proposed to provide store of value and unit of account functionalities, due to their non-fluctuating value in terms of fiat currencies or any other alternative. In addition, they purport to solve a group of critical issues that were introduced when using cryptocurrencies introduce. In this section, we discuss these issues.
 
 \subsection{Cryptocurrencies as Medium of Exchange}
-from the blockchain paper:At present, any business would take a significant risk accepting cryptocurrencies as a medium of exchangedue to the significant volatility of this asset class. Stablecoins hold the potential to help unlock the use ofcryptocurrencies for day-to-day payments for businesses and commerce as price stability is a key missingelement for the adoption of cryptocurrencies by merchants and retailers all over the world.Companies need a degree of certainty about their short-term cash reserves and revenues. Transactingin ether or bitcoin would make the role of a treasurer a difficult task as the business?s runway (how longthe company can survive if income and expenses stay constant) could adversely shift in an instant due tounfavorable market swings.
+from the blockchain paper:
+At present, any business would take a significant risk accepting cryptocurrencies as a medium of exchange
+due to the significant volatility of this asset class. Stablecoins hold the potential to help unlock the use of
+cryptocurrencies for day-to-day payments for businesses and commerce as price stability is a key missing
+element for the adoption of cryptocurrencies by merchants and retailers all over the world.
+Companies need a degree of certainty about their short-term cash reserves and revenues. Transacting
+in ether or bitcoin would make the role of a treasurer a difficult task as the business?s runway (how long
+the company can survive if income and expenses stay constant) could adversely shift in an instant due to
+unfavorable market swings.
 
 \subsection{Cryptocurrencies as Unit of Account}
-from the blockchain paper:The unit of account is the measure by which goods and services are priced and a necessary feature for agiven asset to become ?money?. In the US, retailers price goods in USD, employees are paid in USD by theiremployers, profits/losses and assets/liabilities are denominated in USD. There is currently no agreementregarding the intrinsic value (and future value) of a given cryptocurrency, meaning accepting bitcoin as a?unit? is therefore problematic.Stablecoins can be pegged to established units of accounts in their respective countries and can thusbecome a digital representation of the unit of account (so long as the peg is maintained). Given theiremphasis on price stabilty and the ability to peg stablecoins to inflation, stablecoins also arguably have agreater chance of becoming an independent unit of account in the longer-term.
+from the blockchain paper:
+The unit of account is the measure by which goods and services are priced and a necessary feature for a
+given asset to become ?money?. In the US, retailers price goods in USD, employees are paid in USD by their
+employers, profits/losses and assets/liabilities are denominated in USD. There is currently no agreement
+regarding the intrinsic value (and future value) of a given cryptocurrency, meaning accepting bitcoin as a
+?unit? is therefore problematic.
+Stablecoins can be pegged to established units of accounts in their respective countries and can thus
+become a digital representation of the unit of account (so long as the peg is maintained). Given their
+emphasis on price stabilty and the ability to peg stablecoins to inflation, stablecoins also arguably have a
+greater chance of becoming an independent unit of account in the longer-term.
 
 \subsection{Cryptocurrencies as Store of Value}
 from the blockchain paper:
-A store of value is a commodity, asset, or money that retains its purchasing power or value into the future.Some view cryptoassets including bitcoin as too volatile to be commonly accepted as a store of value.Some companies need to hedge themselves over the long-term. For example, miners are currently highlyexposed to the price of the cryptoasset they receive in return for computing resources. A stable reserve ofliquid assets is needed to cover one-off additional fixed costs (such as purchasing hardware) and on-goingvariable costs (such as electricity).In the current crypto ecosystem, volatility risk is currently being highlighted in fundraising via Initial CoinOfferings (?ICOs?). Projects generally raise a given amount of ether to allocate resources in order to deliveron their promises. Due to the high level of friction associated with converting cryptoassets into fiat,founding teams tend to hold most of their funds in ether. In a bear market associated with falling priceslike the present one, management would have to meet investor expectations while suddenly having lesscapital at their disposal. Stablecoins could thus help founding teams of ICO projects manage their fundingmore saftely over the long-term.
+A store of value is a commodity, asset, or money that retains its purchasing power or value into the future.
+Some view cryptoassets including bitcoin as too volatile to be commonly accepted as a store of value.
+Some companies need to hedge themselves over the long-term. For example, miners are currently highly
+exposed to the price of the cryptoasset they receive in return for computing resources. A stable reserve of
+liquid assets is needed to cover one-off additional fixed costs (such as purchasing hardware) and on-going
+variable costs (such as electricity).
+In the current crypto ecosystem, volatility risk is currently being highlighted in fundraising via Initial Coin
+Offerings (?ICOs?). Projects generally raise a given amount of ether to allocate resources in order to deliver
+on their promises. Due to the high level of friction associated with converting cryptoassets into fiat,
+founding teams tend to hold most of their funds in ether. In a bear market associated with falling prices
+like the present one, management would have to meet investor expectations while suddenly having less
+capital at their disposal. Stablecoins could thus help founding teams of ICO projects manage their funding
+more saftely over the long-term.
 
 \subsection{dApps}
 from the blockchain paper:
-In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocollayers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t beincentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). Thisshould in turn increase the token velocity and fulfil the potential of decentralised networks.dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeablefuture. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
+In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocol
+layers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.
+Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t be
+incentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). This
+should in turn increase the token velocity and fulfil the potential of decentralised networks.
+dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeable
+future. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.
+Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
 
 \subsection{Lending with Cryptocurrencies}
 Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time.
@@ -76,7 +122,10 @@ Governments have recently started examining  the idea of issuing a central bank-
 
 \subsection{Remittance}
 from the blockchain paper:
-Stablecoins eliminate price volatility risk as crypto payments are being processed. To stay relevant in thiscontext, transactions would have to be confirmed rapidly (ideally in a matter of seconds) to provide a gooduser experience and a noteworthy improvement compared to transfers relying on the current underlyingbanking infrastructure (international banking transfers currently take up to three days).
+Stablecoins eliminate price volatility risk as crypto payments are being processed. To stay relevant in this
+context, transactions would have to be confirmed rapidly (ideally in a matter of seconds) to provide a good
+user experience and a noteworthy improvement compared to transfers relying on the current underlying
+banking infrastructure (international banking transfers currently take up to three days).
 
 % nation issued digital assets can be
 %
@@ -165,20 +214,30 @@ Define the properties that are considered during the design of stable coins.
 \begin{table}[]
 	\begin{tabular}{|l|l|l|l|l|}
 		\hline
-		& Collateralization (+ the value of the collateral) & Price Oracle & Centralization  \\ \hline
-		BitShares (BitUSD) &  Crypto-collateralized &  No & \\ \hline
-		BitBay & Non-collateralized & &  \\ \hline
-		 DAI& Crypto-collateralized (ETH)  &  Yes& No \\ \hline
-		 BitShares&Crypto-collateralized&Yes&\\ \hline
-		 Basis&Non-collateralized&& \\ \hline
-		 Tether & Fiat-collateralized (USD) & & Yes \\ \hline
-		  &&& \\ \hline
+		& Collateralization  & Price Oracle & Centralization & Feedback Mechanism
+		\\ &(+ the value of the collateral)&&&
+		 \\ \hline
+		BitShares (BitUSD) &  Crypto-collateralized &  No & &\\ \hline
+		BitBay & Non-collateralized & & & \\ \hline
+		 DAI& Crypto-collateralized (ETH)  &  Yes& No & Target Price, Target rate,\\ 
+		 &&&&Sensitivity Parameter,\\ 
+		 &&&&Global Settlement \\ \hline
+		 BitShares&Crypto-collateralized&Yes&&\\ \hline
+		 Basis&Non-collateralized&& &\\ \hline
+		 Tether & Fiat-collateralized (USD) & & Yes &\\ \hline
+		  &&&& \\ \hline
 	\end{tabular}
 \end{table}
 
 Decentral price oracle and Schelling point~\cite{cryptoinsider}
 DAI and Bitshares~\cite{cryptoinsider}
+Feedback column from ~\cite{report}
 
+Today, it would appear that prioritization of automation/transparency generally carries with it the trade-off of greater stability complexity (i.e., risk that the peg will be broken). In other words, the more decentralized the stablecoin design, the less likely it is to remain price stable against a peg like the US dollar. The success of Tether offers at least some evidence that so far the market has prioritized stability over
+decentralization (i.e., transparency and automation).Anyone who prioritizes
+decentralization already has the option to own arguably the most decentralized cryptoasset, bitcoin.~\cite{report}
+~\textit{A question to think about: }But does the
+broader world beyond the digital assets ecosystem really need (or want) stablecoins?~\cite{report}
 % Tether, the largest stablecoin in terms of its market value of approximately $2.7 billion USD, illustrates the underlying demand for a stablecoin
 \section{Critical Issues with Stable Coins}
 
