--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -1,5 +1,6 @@
 % !TEX root = ../main.tex
-\section{Introduction}
+\section{Introduction}\label{Intro}
+~\textblue{stable coins is defined as cryptocurrency with the volatility characteristic of the fiat currency, all we want to do is to get the stability of the dollar and combine with with the decentralized distributed ledger aka blockchain.}
 Very quick introduction to blockchain/crypto
 What is stability vs volatility.
 About coin supply and volatility~\cite{sams2015note}.
@@ -67,37 +68,23 @@ As mentioned in the ..., currencies can serve as a store of value, a unit of acc
 
 
 \subsection{Cryptocurrencies as Medium of Exchange}
-Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company employers to provide the employees incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve greatly as a medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies. ~\textblue{Taken from the blockchain report but in my own words.}
-
+Despite the fast growing of the cryptocurrencies and decentral applications, there is still little deployment of these digital assets in the daily payment procedures of the companies and businesses. The main reason is that these assets are volatile in the price and hence highly risky to be deployed by merchants and retailers, \ie it is impossible for a company employers to provide the employees incomes in a volatile cryptocurrency \eg BTC with which there is a high level of future value and price uncertainty. On the other hand, having an stable price over the time, stable coins can serve as a true medium of exchange while they preserve all the advantages of using cryptocurrencies as opposed to fiat currencies. 
 \subsection{Cryptocurrencies as Unit of Account}
-One of the most necessary functions of money is to serve as a unit of account-- the common measure that sets price to goods and services. Fiat currencies, \eg US dollar, Pound \etc serve this functionality correctly so they are used as units of accounts in the US and Europe respectively. Unfortunately, cryptocurrencies such as BTC, which do not have a stable price and value, do not seem to be used as a unit of account hence will not be able to serve as \textit{money} and replace the fiat currencies. However, given the price stability that stable coins offer, they have higher chance to be used as a digital representation of a unit of account and hence replace fiat.
+One of the most necessary functions of money is to serve as a unit of account-- the common measure that sets price to goods and services. Fiat currencies, \eg US dollar, Pound \etc serve this functionality correctly so they are used as units of accounts in the US and Europe respectively. Unfortunately, cryptocurrencies such as BTC, which do not have a stable price and value, do not seem to be used as a unit of account hence will not be able to serve as \textit{money} and replace the fiat currencies. However, given the price stability that stable coins offer, they have higher chance to be used as a digital representation of a unit of account and hence replace fiat. 
 
 \subsection{Cryptocurrencies as Store of Value}
-from the blockchain paper:
-A store of value is a commodity, asset, or money that retains its purchasing power or value into the future.
-Some view cryptoassets including bitcoin as too volatile to be commonly accepted as a store of value.
-Some companies need to hedge themselves over the long-term. For example, miners are currently highly
-exposed to the price of the cryptoasset they receive in return for computing resources. A stable reserve of
-liquid assets is needed to cover one-off additional fixed costs (such as purchasing hardware) and on-going
-variable costs (such as electricity).
-In the current crypto ecosystem, volatility risk is currently being highlighted in fundraising via Initial Coin
-Offerings (?ICOs?). Projects generally raise a given amount of ether to allocate resources in order to deliver
-on their promises. Due to the high level of friction associated with converting cryptoassets into fiat,
-founding teams tend to hold most of their funds in ether. In a bear market associated with falling prices
-like the present one, management would have to meet investor expectations while suddenly having less
-capital at their disposal. Stablecoins could thus help founding teams of ICO projects manage their funding
-more saftely over the long-term.
+Any asset, commodity, or money that maintains its value is called a store of value. As mentioned in Section~\ref{Intro}, high volatile crypto-currencies (\ie Bitcoin) cannot fulfill this property of money as they cannot maintain their purchasing value for long-term. In contrast, stable coins can be accepted as a store of value as their price remains stable over the time.
 
-\subsection{dApps}
-from the blockchain paper:
-In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocol
-layers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.
-Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t be
-incentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). This
-should in turn increase the token velocity and fulfil the potential of decentralised networks.
-dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeable
-future. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.
-Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
+%\subsection{dApps}
+%from the blockchain paper:
+%In the web 3.0 stack, decentralized applications (?dApps?) are being built on top of infrastructure protocol
+%layers. Many of those applications will likely rely on price stable cryptocurrencies to distribute value.
+%Stablecoins should accelerate the shift from token speculation to usage in dApps as users won?t be
+%incentivised to hold (or sell) the token in anticipation of future price appreciation (or depreciation). This
+%should in turn increase the token velocity and fulfil the potential of decentralised networks.
+%dApps are the channel through which stablecoins are likely to be brought to the masses in the foreseeable
+%future. For example, MakerDAO and Dether recently partnered to bring Dai to mobile ATMs.
+%Finally, ERC20 stablecoins can be held and transferred by anyone who already has an Ethereum wallet, and nearly half of all stablecoin projects (48\%) are running on Ethereum. Provided that Ethereum is a successful underlying infrastructure protocol for dApps, ERC20 stablecoins should be adopted faster and benefit from the Ethereum vibrant ecosystem.
 
 \subsection{Lending with Cryptocurrencies}
 Despite quite a few blockchain applications in financial technologies, there has been little deployment of lending. One of the main challenges with the lending that makes it difficult to be deployed on the blockchains is the monetary instability observed in the the existing cryptocurrencies~\cite{okoyetoward}. This volatility has led the existing cryptocurrencies to be used more as speculative investments instead of serving as store of value and unit of account. In a lending situation with volatile currencies, where their value is being depreciated or appreciated over time, the cash taker will eventually owe more than what he has borrowed or the vice versa. Therefore, the volatility in the value of cryptocurrencies cause serious concerns and difficulties both for cash takers and cash providers~\cite{okoyetoward}. In the contrast, lending perfectly works if a loan is done with a stable cryptocurrency, whose value remains stable over the time.
@@ -107,11 +94,9 @@ Despite quite a few blockchain applications in financial technologies, there has
 %Governments have recently started examining  the idea of issuing a central bank-issued digital currency (CBDC)~\cite{barrdear2016macroeconomics}. These national digital currencies are regulated by federal regulators instead of serving in a form of decentralized currencies-- where only the owner has the sole control and ownership of the assets. CBDCs are not backed by any tangible assets and are issued by central banks so that they could keep their monetary policy while adopting the trend of digital assets. However, an oppressive government may abuse these assets to manipulate the markets or to limit the ownership of these assets to  a special group of people (\eg citizens of that specific country). However, since stable coins are not backed by any central party and financial regulator, users are assured about the stability as well as having easier access no matter where they live and/or come from.
 
 \subsection{Remittance}
-from the blockchain paper:
-Stablecoins eliminate price volatility risk as crypto payments are being processed. To stay relevant in this
-context, transactions would have to be confirmed rapidly (ideally in a matter of seconds) to provide a good
-user experience and a noteworthy improvement compared to transfers relying on the current underlying
-banking infrastructure (international banking transfers currently take up to three days).
+
+Although cryptocurrencies, specially Bitcoin, play a revolutionary role in financial system, they are yet not easy to transact with due to their volatility characteristics. Therefore, having a stable coin one can benefit from the decentralized nature of the token while there is no price volatility risk as the transaction or the payment is processed cross boarders specially when it comes to remittances.
+
 
 % nation issued digital assets can be
 %
@@ -174,25 +159,25 @@ banking infrastructure (international banking transfers currently take up to thr
 %combine programmability + stability > when the flight gets cancelled or delayed the smart contract will \textbf{automatically} pay the passengers. In this situation, an stable coin is needed.
 %from the blockchain report: In travel and many other smart insurance use cases, it would be preferable to denominate the smart contract with a stablecoin rather than a more volatile cryptocurrency, such as ether (ETH). Generally, people take out insurance to reduce risk and would therefore want smart contract insurance underpinned by a stable currency.
 
-\textit{Other possible solutions to lending:} ~\textblue{While stable coin is one of them what can be the other possible solutions?}
-
-\textblue{Taken from ~\cite{okoyetoward}, paraphrasing needed!}
-Addressing monetary instability:
-\begin{itemize}
-	\item The rate of release of new currency into the system could be modified to en-
-	able new currency to be introduced at (i) a more insightful rate or (ii) based
-	on some internal metrics of the system like number of transactions. [Remark:
-	an insightful rate has been elusive despite many alt-coins customizing the
-	schedule and it is difficult to see how metrics could not be gamed].
-	\item A cryptocurrency can also use explicit pegging but it is no better suited to this system than standard currencies.
-	\item A central bank could manage currency circulation while allowing other as-
-	pects to be decentralized. [	Remark:Central banks have been historically
-	unsuccessful at using money circulation as a target].
-	\item The loan could be use the cryptocurrency as the medium of exchange but
-	use a stable (e.g.,	government) currency as the unit of account.
-\end{itemize}
-
-\textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
+%\textit{Other possible solutions to lending:} ~\textblue{While stable coin is one of them what can be the other possible solutions?}
+%
+%\textblue{Taken from ~\cite{okoyetoward}, paraphrasing needed!}
+%Addressing monetary instability:
+%\begin{itemize}
+%	\item The rate of release of new currency into the system could be modified to en-
+%	able new currency to be introduced at (i) a more insightful rate or (ii) based
+%	on some internal metrics of the system like number of transactions. [Remark:
+%	an insightful rate has been elusive despite many alt-coins customizing the
+%	schedule and it is difficult to see how metrics could not be gamed].
+%	\item A cryptocurrency can also use explicit pegging but it is no better suited to this system than standard currencies.
+%	\item A central bank could manage currency circulation while allowing other as-
+%	pects to be decentralized. [	Remark:Central banks have been historically
+%	unsuccessful at using money circulation as a target].
+%	\item The loan could be use the cryptocurrency as the medium of exchange but
+%	use a stable (e.g.,	government) currency as the unit of account.
+%\end{itemize}
+%
+%\textit{Other possible solutions to lending:} While stable coin is one of them what can be the other possible solutions?
 
 \section{Comparison Framework} % Put the code for the framework
 Define the properties that are considered during the design of stable coins.
